[package]
name = "ipgeomapper"
version = "0.1.0"
authors = ["Ossi Vanhala <ozzivanhala@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
actix-web = "3.3.3"
actix-files = "0.5.0"
dotenv = "0.15.0"